<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:gravity="center"
            android:text="@string/alarm_title"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:background="@drawable/background4"/>

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center" >

            <com.example.feedyourpet.PickerView
                android:id="@+id/pickerView0"
                android:layout_width="65dp"
                android:layout_height="160dp"
                android:layout_marginStart="20dp"/>
            <TextView
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/unit_hour"
                android:textSize="20sp"/>
            <com.example.feedyourpet.PickerView
                android:id="@+id/pickerView1"
                android:layout_width="65dp"
                android:layout_height="160dp"
                android:layout_marginStart="15dp"/>
            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/unit_minute"
                android:textSize="20sp"/>
            <com.example.feedyourpet.PickerView
                android:id="@+id/pickerView2"
                android:layout_width="80dp"
                android:layout_height="160dp"
                android:layout_marginStart="15dp"/>
            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="25dp"
                android:paddingTop="10dp"
                android:text="@string/unit_weight"
                android:textSize="20sp"/>


        </LinearLayout>

        <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#d0d0d0" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_gravity="bottom"
            android:background="@drawable/background3"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/button_cancel"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/alarm_cancel"
                android:textSize="16sp"
                android:background="@android:color/transparent"/>
            <View
                android:layout_width="1dp"
                android:layout_height="30dp"
                android:background="#d0d0d0"/>
            <Button
                android:id="@+id/button_finish"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/alarm_finish"
                android:textSize="16sp"
                android:background="@android:color/transparent"/>
        </LinearLayout>
    </LinearLayout>

</FrameLayout>